The diff contains changes to the CSS files of the SocialMediaItem, MainCard, PersonalCardItem, and ContentCardItem components.  - The SocialMediaItem component now has a flex-start alignment.  - The MainCard component now has a fixed height of 40vh.  - The PersonalCardItem component now has a fixed height of 60vh.  - The ContentCardItem component now has a fixed height of 60vh.

--- a/src/components/SocialMediaItem/SocialMediaItem.css
+++ b/src/components/SocialMediaItem/SocialMediaItem.css
@@ -29,5 +29,6 @@
 		align-items: flex-end;
 		margin-top: 0;
 		order: 4;
+		align-self: flex-start;
 	}
 }
