--- a/src/pages/MainCard/MainCard.css
+++ b/src/pages/MainCard/MainCard.css
@@ -32,6 +32,6 @@
 
 	.card-presentation {
 		width: 100%;
-		height: auto;
+		height: 40vh;
 	}
 }
