--- a/src/pages/PersonalCardItem/PersonalCardItem.css
+++ b/src/pages/PersonalCardItem/PersonalCardItem.css
@@ -76,7 +76,7 @@
 @media (max-width: 820px), (max-height: 670px) {
 	.card-personal {
 		width: 100%;
-		height: 70vh;
+		height: 60vh;
 		overflow-x: hidden;
 	}
 	.parallax {
