--- a/src/routes/ContentCardItem/ContentCardItem.css
+++ b/src/routes/ContentCardItem/ContentCardItem.css
@@ -16,7 +16,7 @@
 @media (max-width: 820px), (max-height: 670px) {
 	.content-card {
 		width: 100%;
-		height: 77vh;
+		height: 60vh;
 		position: initial;
 	}
 }
